Bug 442325 - When adding new images and tagging them at once, they appear out of order in the Annotation dialog
Summary: When adding new images and tagging them at once, they appear out of order in ...
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Annotation Dialog (other bugs)
Version First Reported In: GIT master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-12 08:46 UTC by Tobias Leupold
Modified: 2022-11-28 10:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Leupold 2021-09-12 08:46:01 UTC
When adding new images, selecting them and opening them in the annotaion dialog, they (sometimes) appear out of order. In the preview list, they are ordered correctly.

If the images are added, afterwards the database is saved, KPA closed and re-opened, the new images are sorted correctly when opened in the annotaion dialog.

Apparently, some sorting is missing on new images?
Comment 1 Johannes Zarl-Zierl 2022-10-08 22:45:39 UTC
I can confirm the bug. 
Steps to reproduce:
1. Start kphotoalbum --demo
2. Create e.g. 40 new images in the image directory
3. Rescan for new images
4. Show thumbnails
5. Click on first new image and press "Shift+End" to select all images until the last one
6. Annotate images in single image mode

Expected result:
Annotation dialog should show the same ordering as shown in the thumbnail dialog

Observed result:
The first few images are shown in the correct order, but after that they seem to have been mixed somewhow.
For me, it seemed like the correctly ordered images were equal to the number of images in one row. I don't know whether this was a coincidence.
Comment 2 Johannes Zarl-Zierl 2022-10-08 22:50:22 UTC
One further note: tracing the steps in ThumbnailWidget::selection() shows that the selection is incorrectly ordered already.

I'm not sure if we can sort it there: the current behavior allows users to select images using Ctrl-Click in an arbitrary order, and that order is preserved for the Annotation dialog. Is this what we want, or was that just by chance?
Comment 3 Tobias Leupold 2022-10-10 09:41:33 UTC
From a KPA user's perspective, I personally would expect the images always to be ordered chronologically.

Is there a benefit for this arbitrary selection and ordering?!
Comment 4 Johannes Zarl-Zierl 2022-10-10 20:24:51 UTC
> Is there a benefit for this arbitrary selection and ordering?!

That is kind of the question that I'm asking. I can imagine someone selecting images 4, 3, 2, 1 and expect to annotate the images in that order (or maybe open them in some external tool in that order). The question is: is the expectation to annotate images in the selection order a reasonable expectation or not?

Personally, I never even tried to select images in a specific order so the behavior was a surprise to me. So I wanted some second opinion if it's just me ;-)
Comment 5 Tobias Leupold 2022-10-11 05:50:00 UTC
I can't imagine a situation where I would select images in the preview in a specific order and expect them to show up in that very order. Ordered chronologically is what I personally always would expect, no matter the pattern I clicked, CRTL+A or whatever.
Comment 6 Johannes Zarl-Zierl 2022-11-28 00:36:42 UTC
Git commit 56f60d5dbc331ec39ece0e17e55dd19d2b0905ad by Johannes Zarl-Zierl.
Committed on 28/11/2022 at 00:36.
Pushed by johanneszarl into branch 'master'.

Sort image selection

M  +1    -0    CHANGELOG.md
M  +3    -1    ThumbnailView/ThumbnailWidget.cpp

https://invent.kde.org/graphics/kphotoalbum/commit/56f60d5dbc331ec39ece0e17e55dd19d2b0905ad
Comment 7 Tobias Leupold 2022-11-28 10:02:23 UTC
Nice :-) Thanks!