Sort image selection

BUG: 442325